--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_DOMAIN = "http://localhost:6060"
-VITE_WS = "ws://localhost:6061/ws?token="
+VITE_DOMAIN = "http://8.152.96.199:8080"
+VITE_WS = "ws://8.152.96.199:6061/ws?token="
 VITE_WS_CHCEK = false
