--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "esaymeeting-front",
+  "name": "watermelonMeeting",
   "version": "1.0.0",
   "description": "An Electron application with Vue",
   "main": "./out/main/index.js",
