--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VITE_DOMAIN = "http://localhost:8080"
-VITE_WS = "ws://localhost:6061/ws?token="
+VITE_DOMAIN = "http:/114.66.38.139:9092"
+VITE_WS = "ws://114.66.38.139:6061/ws?token="
 VITE_WS_CHCEK = false
